--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ backend/node_modules/
 # Python cache files
 backend/__pycache__/
 backend/app/__pycache__/
+backend/app/core/__pycache__/
 
 # Editor directories and files
 .vscode/*
@@ -38,3 +39,4 @@ backend/app/__pycache__/
 
 # Mac system files
 node_modules/
+
