--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,13 @@ backend/node_modules/
 # Python cache files
 backend/__pycache__/
 backend/app/__pycache__/
+backend/app/api/__pycache__/
+backend/app/auth/__pycache__/
 backend/app/core/__pycache__/
+backend/app/domain/__pycache__/
+backend/app/routes/__pycache__/
+backend/app/application/__pycache__/
+backend/app/infrastructure/__pycache__/
 
 # Editor directories and files
 .vscode/*
@@ -40,4 +46,4 @@ backend/app/core/__pycache__/
 # Mac system files
 node_modules/
 
-backend/app/__pycache__/main.cpython-312.pyc
+
