--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,12 @@ backend/app/__pycache__/
 backend/app/api/__pycache__/
 backend/app/auth/__pycache__/
 backend/app/core/__pycache__/
+backend/app/models/__pycache__/
 backend/app/domain/__pycache__/
 backend/app/routes/__pycache__/
+backend/app/services/__pycache__/
 backend/app/application/__pycache__/
+backend/app/repositories/__pycache__/
 backend/app/infrastructure/__pycache__/
 
 # Editor directories and files
@@ -47,3 +50,4 @@ backend/app/infrastructure/__pycache__/
 node_modules/
 
 
+backend/app/usuarios.json
